# Multi3DViz

./: .gitignore  README.md  m3v_backend.spec  package-lock.json  package.json  requirements.txt
backend/: main.py
docs/: ARCHITECTURE.md  PACKAGING.md  PLUGIN_DEV.md  WS_PROTOCOL.md
electron/: main.js  preload.js
frontend/: index.html
preview/: color_probe.js  layout_probe.js
robot_side/: README.md  package.json  pyproject.toml  requirements.txt
robot_side/docs/: AGENT_ARCHITECTURE.md  DATA_CONTRACT.md  DEPLOYMENT.md  UNITREE_SDK_NOTES.md
robot_side/electron/: main.js  preload.js
robot_side/m3v_agent/: __init__.py  agent.py  config.py
robot_side/m3v_agent/drivers/: __init__.py  agibot_driver.py  unitree_driver.py
robot_side/m3v_agent/executor/: __init__.py  base_driver.py  navigator.py  odom_file_pose.py  target_poller.py
robot_side/m3v_agent/recorder/: __init__.py  atomic_io.py  cloud_sink.py  gravity_calib.py
robot_side/m3v_agent/transport/: __init__.py  scp_pusher.py
robot_side/m3v_agent/web/: __init__.py  status_server.py
robot_side/packaging/: build-deb-simple.sh  build-deb.sh
robot_side/packaging/deb/: m3v-agent.service  postinst  prerm
robot_side/shell/: index.html
robot_side/templates/agibot/: cleanup.sh  config.yaml  deploy.sh  m3v-agent-agibot-exec.service  m3v-agent-agibot.service  pipeline.sh
robot_side/templates/unitree/: config.yaml  deploy.sh  m3v-agent-unitree.service
robot_side/tests/: test_atomic_io.py  test_fake_driver.py  test_stdio_ui.py  test_target_parser.py  test_web_status.py
scripts/: deploy_m3v_agibot.py  (+8 more)
(+34 files in other folders)
